src/app/globals.css
@import "tailwindcss";

@theme {
  --color-background: #000000;
  --color-foreground: #ffffff;

  --color-zinc-50: #fafafa;
  --color-zinc-100: #f4f4f5;
  --color-zinc-200: #e4e4e7;
  --color-zinc-300: #d4d4d8;
  --color-zinc-400: #a1a1aa;
  --color-zinc-500: #71717a;
  --color-zinc-600: #52525b;
  --color-zinc-700: #3f3f46;
  --color-zinc-800: #27272a;
  --color-zinc-900: #18181b;
  --color-zinc-950: #09090b;

  --color-primary: #ffffff;
  --color-primary-foreground: #000000;

  --color-muted: #27272a;
  --color-muted-foreground: #a1a1aa;

  --color-card: #18181b;
  --color-card-foreground: #ffffff;

  --color-border: #3f3f46;
  --color-input: #3f3f46;

  --color-ring: #ffffff;

  --color-accent: #27272a;
  --color-accent-foreground: #ffffff;

  --color-secondary: #27272a;
  --color-secondary-foreground: #ffffff;

  --color-destructive: #ef4444;
  --color-destructive-foreground: #ffffff;

  --font-sans: var(--font-inter);

  --animate-spin-slow: spin 8s linear infinite;
  --animate-marquee: marquee var(--duration) infinite linear;
  --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
  --animate-border-beam: border-beam calc(var(--duration)*1s) infinite linear;
}

@layer base {
  html {
    /* @apply overflow-x-hidden; */
  }

  body {
    @apply bg-background text-foreground antialiased;
    font-feature-settings: "rlig" 1, "calt" 1;
  }
}

@layer utilities {
  .container-wrapper {
    @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
  }

  .h1 {
    @apply text-5xl md:text-7xl font-bold tracking-tight leading-tight;
  }

  .h2 {
    @apply text-3xl md:text-5xl font-semibold tracking-tight;
  }

  .text-gradient {
    @apply bg-clip-text text-transparent bg-linear-to-b from-white to-zinc-500;
  }
}

@keyframes marquee {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(calc(-100% - var(--gap)));
  }
}

@keyframes marquee-vertical {
  from {
    transform: translateY(0);
  }

  to {
    transform: translateY(calc(-100% - var(--gap)));
  }
}

@keyframes border-beam {
  100% {
    offset-distance: 100%;
  }
}

